@@ -1,4 +1,4 @@
-SUBDIRS=u5sav
+SUBDIRS=u5sav u5runes
 bin_SCRIPTS=u5tools
 CLEANFILES=u5tools
 EXTRA_DIST=LICENSE u5tools.in
