@@ -2,6 +2,9 @@ vim: set tw=72 :
 
 			      ==[ News ]==
 
+2018-10-06:  I added the start of a `runes` sub-command which draws
+SVG runes of the input.
+
 2018-10-05:  I'm starting the collect the U5 ultilities into a single,
 autotool'ed repository.  The first entry is "sav", which cheats on the
 more boring inventory aspects of the game by giving your party lots of
